fixed overflow on landing page

--- a/React JS/React Final Project/rButler/src/App.css
+++ b/React JS/React Final Project/rButler/src/App.css
@@ -8,6 +8,20 @@
     --dark-blue: #2d475a;
 }
 
+html {
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: var(--light-grey);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+        'Helvetica Neue', sans-serif;
 }
