--- a/React JS/React Final Project/rButler/src/components/Home/Home.css
+++ b/React JS/React Final Project/rButler/src/components/Home/Home.css
@@ -1,14 +1,14 @@
 .landing-container {
     display: flex;
     align-items: stretch;
-    height: 91.5vh;
+    height: 91.7vh;
 }
 
 .landing-content {
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     text-align: center;
     padding: 20px;
@@ -17,7 +17,7 @@
 
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 91.7vh;
     background: var(--light-grey);
     overflow: hidden;
 }
