--- a/React JS/React Final Project/rButler/src/components/Navbar/Navbar.css
+++ b/React JS/React Final Project/rButler/src/components/Navbar/Navbar.css
@@ -1,20 +1,3 @@
-html {
-    box-sizing: border-box;
-}
-
-*,
-*::before,
-*::after {
-    box-sizing: inherit;
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
-        sans-serif;
-}
-
 nav {
     width: 100%;
     background-color: var(--light-grey);
